Fixed the issue with the missing hamburger menu button. Next I plan on fixing the issue where the navbar buttons shift on smaller screens.

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -9,9 +9,12 @@ body {
     height: 4rem;
 }
 
-.navbar-brand {
-    position: fixed;
-    height: 4rem;
+/* .navbar-brand {
+    
+} */
+
+.navbar-brand-img {
+    height: 3.5rem;
 }
 
 .navbar-collapse {
